temporarily change menu logo & solve collapsing problem in nav items

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -80,7 +80,7 @@
   white-space: pre-wrap;
   color: white;
   font-size: 15px;
-  font-family: 'Raleway Dots', cursive;
+  font-family: 'Raleway', cursive;
   text-align: center;
   background: #c44536;
 }
